--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation 'android.arch.lifecycle:common-java8:1.1.0'
     implementation 'android.arch.persistence.room:runtime:1.0.0'
     implementation 'android.arch.paging:runtime:1.0.0-alpha5'
+    implementation 'com.android.support:support-v4:27.0.2'
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
     testImplementation 'junit:junit:4.12'
     testImplementation 'android.arch.core:core-testing:1.1.0'
     testImplementation 'android.arch.persistence.room:testing:1.0.0'
