--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,14 @@ dependencies {
     implementation 'android.arch.paging:runtime:1.0.0-alpha5'
     implementation 'com.android.support:support-v4:27.0.2'
     implementation 'com.android.support:recyclerview-v7:27.0.2'
+
+    // Dependency injection
+    compile 'com.google.dagger:dagger:2.14.1'
+    compile 'com.google.dagger:dagger-android:2.14.1'
+    compile 'com.google.dagger:dagger-android-support:2.14.1' // if you use the support libraries
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.14.1'
+
     testImplementation 'junit:junit:4.12'
     testImplementation 'android.arch.core:core-testing:1.1.0'
     testImplementation 'android.arch.persistence.room:testing:1.0.0'
